styles/base.css
:root {
    --primary-color: #255474;
    /* Blue */
    --secondary-color: #2c3e50;
    /* Green */

    --background-color: #ffffff;
    /* Light Gray */
    --text-color: #333;
    /* Dark Gray */

    --accent-color: #e74c3c;
    /* Red */
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-family: 'Ubuntu', sans-serif;
    background-color: var(--background-color);
    margin: 0;
    padding: 0;
}

header {
    background-color: var(--primary-color);
    display: flex;
    justify-content: center;
    color: #ecf0f1;
}

#profile-photo {
    padding: 0;
    margin: 1rem;
    grid-column: 1/2;
    box-shadow: 4px 8px 20px -1px rgb(39, 38, 38);
    border-radius: 1rem;
}

#name {
    margin: auto 0;
    font-size: 4rem;
    padding: 1rem;
    grid-column: 2/3;
}

nav {
    padding: 0;
    margin: 0;
}

nav ul {
    display: grid;
    list-style: none;
    grid-template-columns: repeat(4, 1fr);
    text-align: center;
    font-size: 1.5rem;
    font-weight: bold;
    margin: 0 auto;
    padding: 0;
}

nav li {
    width: 100%;
    height: 100%;
    background-color: var(--secondary-color);
    color: #ecf0f1;
    padding: .5rem 0;
}

nav ul li:hover {
    background-color: var(--accent-color);
    text-decoration: overline;
}

nav a {
    text-decoration: none;
    color: inherit;
}

main {
    margin:2rem 7rem;
    padding-top: 2rem;
    padding: 0 2rem;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr auto;
    gap: 0px 3rem;
}

.card {
    margin: 2rem 0;
    padding: 0;
    border: var(--secondary-color) 1px solid;
    border-radius: 5px;
    box-shadow: 4px 8px 20px -1px rgb(39, 38, 38);
}

.card h2 {
    background-color: var(--primary-color);
    color: #ecf0f1;
    margin: 0;
    padding: .8rem;
    border-radius: 5px 5px 0 0;
    text-align: center;
}

.card ul li {
    list-style: none;
    font-size: 1.7rem;
    margin-bottom: .4rem;
}

.card ul li a {
    margin: 0 .4rem;
}

.card p {
    font-size: 1.6rem;
    margin: auto 0;
    padding: 1rem;
    text-align: center;
    line-height: 3rem;
}

main h1 {
    grid-column: 1/4;
    grid-row: 1;
    border-bottom: var(--secondary-color) solid 2px;
    margin: 0;
    padding-bottom: .5rem;
    font-size: 2.6rem;
}

main section:nth-of-type(1) {
    grid-column: 1/3;
    grid-row: 2;
}

main section:nth-of-type(2) {
    grid-column: 3/4;
    grid-row: 2;
}

footer {
    display: grid;
    justify-items: center;
    background-color: var(--primary-color);
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr 1fr;
    padding: 1rem 3rem;
    margin-top: auto;
}

footer p {
    text-align: center;

}

#flag {
    height: 5rem;
    margin: auto 0;
    grid-column: 6/7;
    grid-row: 1/3;
    margin: 0 auto;
}

#copyright {
    width: 100%;
    grid-column: 3/6;
    grid-row: 1/2;
    margin: auto 0;
    font-size: 1.7rem;
    color: var(--background-color);
}

#lastModification {
    width: 100%;
    grid-column: 3/6;
    grid-row: 2/3;
    margin: auto 0;
    font-size: 1.3rem;
    color: #e1ff00;
}

#menu::before {
    content: "≡";
}

#menu.show::before {
    content: "X";
}

#menu {
    display: none;
}

#mode {
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 3rem;
    cursor: pointer;
    font-size: 2rem;
}

